Algorithmization 2lab Iliev

--- a/Algorithmization/Algorithmization/Algorithmization/Algorithmization.vcxproj
+++ b/Algorithmization/Algorithmization/Algorithmization/Algorithmization.vcxproj
@@ -129,7 +129,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="PW_1.cpp" />
-    <ClCompile Include="PW_2.cpp" />
+    <ClCompile Include="PW_1 Iliev.cpp" />
+    <ClCompile Include="PW_2 Iliev.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Algorithmization.h" />
